Fixed method call for download project

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -64,7 +64,7 @@
     <div>
       <h2> Data </h2>
       <ul class="no_bullets list list-arrow">
-        <%= content_tag(:li, link_to('Download project task', project_data_task, data: { turbolinks: false } ) ) %>
+        <%= content_tag(:li, link_to('Download project task', project_data_task_path, data: { turbolinks: false } ) ) %>
       </ul>
     </div>
 
