--- a/app/views/tasks/taxon_names/stats/index.html.erb
+++ b/app/views/tasks/taxon_names/stats/index.html.erb
@@ -7,7 +7,8 @@
 
 <%= link_to('Back to filter', filter_taxon_names_task_path) %>
 
-<%= tag.p @taxon_names.where('taxon_names.cached_nomenclature_date is null').count.to_s + ' Taxon name records in this result do not have data computed.', class: [:feedback, 'feedback-warning', 'feedback-thin'] %>
+<%= tag.p @taxon_names.where('taxon_names.cached_nomenclature_date is null').count.to_s + ' Taxon name records have no data available.', class: [:feedback, 'feedback-warning', 'feedback-thin'] %>
+<%= tag.p @taxon_names.count.to_s + ' total names.', class: [:feedback, 'feedback-info', 'feedback-thin'] %>
 
 <div style="width: 95%">
   <% d1 = taxon_names_count_by_validity_and_year(@taxon_names) %>
