--- a/app/assets/stylesheets/base/data_attributes.scss
+++ b/app/assets/stylesheets/base/data_attributes.scss
@@ -12,7 +12,7 @@
     border-bottom: 1px solid $navigation_border;
   }
 
-  p {
+  > p {
     margin: 0 0 $standard_padding * 0.6 0;
     padding: 0;
     font-weight: 700;
