--- a/app/views/tasks/collection_objects/summary/_nomenclature.html.erb
+++ b/app/views/tasks/collection_objects/summary/_nomenclature.html.erb
@@ -7,38 +7,33 @@
   </tr>
 
   <tr>
-    <% total_families_query = ::Queries::CollectionObject::Filter.new(@collection_objects_query.params.merge(taxon_name_query: {taxon_name_type: 'Protonym', nomenclature_group: 'Family'}) ) -%>
+    <% total_families_query = ::Queries.intersect( CollectionObject, [
+      ::Queries::CollectionObject::Filter.new(taxon_name_query: {taxon_name_type: 'Protonym', nomenclature_group: 'Family'}).all,
+      @collection_objects_query.all ]) %>
+
     <td> Objects determined to family level only </td>
-    <td> <%= total_families = total_families_query.all.count -%> </td>
+    <td><%= total_families = total_families_query.all.count -%> </td>
     <td></td>
-    <td> <%= link_to('Taxon names', filter_taxon_names_task_url(
-      collection_object_query: ::Queries::CollectionObject::Filter.new(@collection_objects_query.params).params,
-      taxon_name_type: 'Protonym',
-      nomenclature_group: 'Family'
-    )) -%>,
-
-    <%= link_to('Objects', filter_collection_objects_task_url(total_families_query.params)) %>
-    </td>
+    <td></td>
   </tr>
 
   <tr>
-    <% total_genera_query = ::Queries::CollectionObject::Filter.new(@collection_objects_query.params.merge(taxon_name_query: {taxon_name_type: 'Protonym', nomenclature_group: 'Genus'}) ) %>
+    <% total_genera_query = ::Queries.intersect( CollectionObject, [
+      ::Queries::CollectionObject::Filter.new(taxon_name_query: {taxon_name_type: 'Protonym', nomenclature_group: 'Genus'}).all,
+      @collection_objects_query.all ]) %>
+
     <td> Objects determined to genus level only </td>
-    <td> <%= total_genera = total_genera_query.all.count -%> </td>
+    <td><%= total_genera = total_genera_query.all.count -%> </td>
     <td></td>
-    <td> <%= link_to('Taxon names', filter_taxon_names_task_url(
-      collection_object_query: ::Queries::CollectionObject::Filter.new(@collection_objects_query.params).params,
-      taxon_name_type: 'Protonym',
-      nomenclature_group: 'Genus'
-    )) -%>,
-
-    <%= link_to('Objects', filter_collection_objects_task_url(total_genera_query.params)) %>
-    </td>
+    <td></td>
   </tr>
 
   <tr>
+    <% total_species_query = ::Queries.intersect( CollectionObject, [
+      ::Queries::CollectionObject::Filter.new(taxon_name_query: {taxon_name_type: 'Protonym', nomenclature_group: 'Species'}).all,
+      @collection_objects_query.all ]) %>
     <td> Objects determined to species level </td>
-    <td> <%= total_species = ::Queries::CollectionObject::Filter.new(@collection_objects_query.params.merge(taxon_name_query: {taxon_name_type: 'Protonym', nomenclature_group: 'Species'}) ).all.count -%> </td>
+    <td> <%= total_species = total_species_query.all.count -%> </td>
   </tr>
 
   <tr>
@@ -90,3 +85,23 @@
     </td>
   </tr>
 </table>
+
+
+<!-- TODO: Partial -->
+<h2> Taxonomic scope </h2>
+
+<% m = ::Queries::TaxonName::Filter.new(collection_object_query: @collection_objects_query.params).all %>
+
+<% if m.count < 10000 %>
+  <% n = ::Queries::TaxonName::Filter.new(collection_object_query: @collection_objects_query.params, ancestrify: true).all %>
+
+  <ul> 
+    <li> <b> Bold means a record is linked directly to that taxon. </b> </li>
+    <li> <%= m.count %> taxon names referenced </li>
+  </ul>
+
+  <%= simple_hierarchy_tag(n, m) -%>
+
+<% else %>
+  Over 10,000 names, too many to summarize.
+<% end %>
