--- a/app/views/tasks/observation_matrices/view/index.html.erb
+++ b/app/views/tasks/observation_matrices/view/index.html.erb
@@ -6,20 +6,21 @@
   <%= tag.li link_to('Edit', new_matrix_task_path(@observation_matrix)) %>
   <%= tag.li link_to('TNT', tnt_observation_matrix_path(@observation_matrix)) %>
   <%= tag.li link_to('nexus', nexus_observation_matrix_path(@observation_matrix)) %>
+  <%= content_tag(:li, link_to('NeXML', nexml_observation_matrix_path(@observation_matrix, format: :html))) -%>
   <%= tag.li link_to('CSV', csv_observation_matrix_path(@observation_matrix)) %>
   <%= tag.li link_to('Descriptor list', descriptor_list_observation_matrix_path(@observation_matrix)) %>
   <%# tag.li tag.em('OTU contents') %>
-  <%= tag.li link_to('OTU contents', otu_contents_observation_matrix_path(@observation_matrix, format: :text)) -%>
+  <%= tag.li link_to('OTU contents', otu_content_observation_matrix_path(@observation_matrix)) -%>
 </ul>
 
 <ul class="context-menu">
   <li>Download</li>
   <%= content_tag(:li, link_to('TNT', tnt_observation_matrix_path(@observation_matrix, format: :text))) -%>
   <%= content_tag(:li, link_to('nexus', nexus_observation_matrix_path(@observation_matrix, format: :text))) -%>
-  <%= content_tag(:li, link_to('NeXML', nexml_observation_matrix_path(@observation_matrix, format: :text))) -%>
+  <%= content_tag(:li, link_to('NeXML', nexml_observation_matrix_path(@observation_matrix, format: :rdf))) -%>
   <%= content_tag(:li, link_to('CSV', csv_observation_matrix_path(@observation_matrix, format: :text))) -%>
   <%= content_tag(:li, link_to('Descriptor list', descriptor_list_observation_matrix_path(@observation_matrix, format: :text))) -%>
-  <%= content_tag(:li, link_to('OTU contents', otu_contents_observation_matrix_path(@observation_matrix, format: :text))) -%>
+  <%= content_tag(:li, link_to('OTU Content', otu_content_observation_matrix_path(@observation_matrix, format: :text))) -%>
 </ul>
 
 <br>
