--- a/app/assets/stylesheets/base/headers.scss
+++ b/app/assets/stylesheets/base/headers.scss
@@ -49,6 +49,10 @@
   }
 }
 
+#header_bar.header_development {
+  background-color: black;
+}
+
 #header_bar.sandbox {
   background-color: #4a4564;
 
