Add long-term loan flag to Loans

--- a/app/views/loans/_attributes.html.erb
+++ b/app/views/loans/_attributes.html.erb
@@ -35,6 +35,11 @@
 </p>
 
 <p>
+  <strong>Is long-term loan:</strong>
+  <%= @loan.is_long_term_loan %>
+</p>
+
+<p>
 <strong>Recipient address:</strong>
 <pre><%= @loan.recipient_address %></pre>
 </p>
