Add DateTime component, add betweenNumbers directive, some refactor related to Time fields, auto set checkboxes on date/time values changes #3753

--- a/app/assets/stylesheets/base/_fonts.scss
+++ b/app/assets/stylesheets/base/_fonts.scss
@@ -33,6 +33,14 @@ $font_light: 300;
   font-weight: $font_light;
 }
 
+.font-bold {
+  font-weight: bold;
+}
+
+.font-medium {
+  font-weight: 700;
+}
+
 /* no longer used unless Rails generated
 .regular_type {
   font-size: 14pt;
@@ -78,7 +86,7 @@ $font_light: 300;
 }
 
 .line-nowrap {
-  white-space: nowrap
+  white-space: nowrap;
 }
 /*
 
