--- a/app/views/geographic_areas/show.html.erb
+++ b/app/views/geographic_areas/show.html.erb
@@ -16,24 +16,9 @@
   <%= tag.em('None') if @geographic_area.children.empty? -%>
   </p>
 
-  <% dgi_id = @geographic_area.default_geographic_item_id %>
-  <% if dgi_id %>
-    <h3> WebLevel1 map </h3>
-    <p><em> This geographic area translates to these corresponding areas in the aggregate WebLevel1 map. </em></p>
-
-    <% a = CachedMapItem.translate_geographic_item_id( dgi_id, 'AssertedDistribution', ['ne_states']) %>
-
-    <div>
-      <%= simple_map( GeographicItem.where(id: a) ) %>
-      <ul>
-        <li> GeographicItem ID(s): <%= a.collect{|id| link_to(id, geographic_item_path(id) )}.join(', ').html_safe %> </li>
-        <li> Corresponding GeographicAreas: <%= GeographicArea.order(:name).joins(:geographic_areas_geographic_items).where(geographic_areas_geographic_items: {geographic_item_id: a}).collect{|g| link_to(g.name, geographic_area_path(g))}.join(', ').html_safe %> </li>
-      </ul>
-
-    </div>
-  <% end %>
+  <%= link_to('Debug default geographic item', debug_geographic_item_task_path(@geographic_area.default_geographic_item_id)) %>
 
 <% end %>
 
-
 <%= render(partial: 'shared/data/project/show', locals: {object: @geographic_area}) -%>
+
