Make BiocurationClassification polymorphic.
Migrate more biological_collection_object id references.

--- a/app/views/taxon_determinations/_attributes.html.erb
+++ b/app/views/taxon_determinations/_attributes.html.erb
@@ -4,8 +4,8 @@
 </p>
 
 <p>
-  <strong>Biological collection object:</strong>
-  <%= collection_object_link(@taxon_determination.biological_collection_object.metamorphosize) %>
+  <strong>TaxonDetermination object:</strong>
+  <%= object_link(@taxon_determination.taxon_determination_object.metamorphosize) %>
 </p>
 
 <p>
