--- a/app/views/field_occurrences/_form.html.erb
+++ b/app/views/field_occurrences/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :collecting_event_id_id %>
-    <%= form.text_field :collecting_event_id_id %>
+    <%= form.label :collecting_event_id %>
+    <%= form.text_field :collecting_event_id %>
   </div>
 
   <div class="field">
