--- a/app/views/field_occurrences/show.html.erb
+++ b/app/views/field_occurrences/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Collecting event:</strong>
-  <%= @field_occurrence.collecting_event_id_id %>
+  <%= @field_occurrence.collecting_event_id %>
 </p>
 
 <p>
