--- a/app/views/shared/data/project/_show.html.erb
+++ b/app/views/shared/data/project/_show.html.erb
@@ -87,16 +87,18 @@
             </div>
           </div>
           <div class="flex-wrap-row"> 
-            <div id="related-panel" class="panel separate-bottom">
-              <div class="content"> 
-                <div class="title-section">
-                  <h2>Associated</h2>
-                </div>
-                <div class="information-panel">
-                  <%= yield :associated -%>
+            <% if content_for?(:associated) %> 
+              <div id="related-panel" class="panel separate-bottom">
+                <div class="content"> 
+                  <div class="title-section">
+                    <h2>Associated</h2>
+                  </div>
+                  <div class="information-panel">
+                    <%= yield :associated -%>
+                  </div>
                 </div>
               </div>
-            </div>
+            <% end %>
 
             <%= render(partial: '/shared/data/all/show/soft_validation', locals: {object: object}) if object.class.respond_to?(:soft_validates?) -%>
             <%= annotations_summary_tag(object) -%>
