Fix favorite layout section

--- a/app/views/hub/navigation_lists/_data.html.erb
+++ b/app/views/hub/navigation_lists/_data.html.erb
@@ -9,7 +9,7 @@
           </div>
         <% end %>
       </div>
-      <div class="data_section_label">
+      <div class="hub_section_label">
         <div class="data-controls">
           <a class="cards-up" href="#" data-icon="arrow-up"></a>
           <a class="cards-down" href="#" data-icon="arrow-down"></a>
