--- a/app/assets/stylesheets/helpers/hub/data.scss
+++ b/app/assets/stylesheets/helpers/hub/data.scss
@@ -1,4 +1,3 @@
-
 // Styling particular to the hub controller and views
 
 #data_cards {
@@ -33,60 +32,39 @@
 
   .data_section {
     display: flex;
-    justify-content:flex-start;
-    flex-direction:column;   
-    width:280px; 
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 280px;
     max-width: 280px;
-    
-    margin: 0.5em;
   }
 
-  .data_section_label {
-    display: flex;
-    height: 34px;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-    justify-content:space-between;
-    flex-direction:flex-start;
-    align-items:center;    
-    margin-left: $standard_margin;
-    margin-right: $standard_margin;
-    border-bottom: 1px solid $navigation_border;
-    text-align: center;
-  }
-  .data_section_label h3 {
-    font-size: $font_normal;
-    color: #888;
-    text-transform: uppercase;
-  }
-
-  [data-attribute="empty"] {
+  [data-attribute='empty'] {
     display: none;
   }
 
-  [data-section="Core"] {
-    width:250px;
-    max-width:250px;
+  [data-section='Core'] {
+    width: 250px;
+    max-width: 250px;
     min-width: 100%;
   }
 
-  [data-section="Supporting"] {
-    width:500px;
-    max-width:500px;
+  [data-section='Supporting'] {
+    width: 500px;
+    max-width: 500px;
     min-width: 100%;
   }
 
-  [data-section="Annotations"] {
-    width:250px;
-    max-width:250px;
+  [data-section='Annotations'] {
+    width: 250px;
+    max-width: 250px;
     min-width: 100%;
-  }    
+  }
 
   .cards-section {
-    order:1;
+    order: 1;
     display: flex;
-    flex-direction:row;
-    justify-content:flex-start;
+    flex-direction: row;
+    justify-content: flex-start;
     flex-flow: row wrap;
     padding: $standard_padding * 0.5;
   }
@@ -100,28 +78,25 @@
 
   .card-container {
     display: flex;
-    flex-direction:row;
-    align-items:center;
+    flex-direction: row;
+    align-items: center;
     position: relative;
     animation-name: show;
     animation-duration: 0.2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
     margin: $standard_margin * 0.5;
-    [data-method="post"] {
+    [data-method='post'] {
       position: absolute;
-      right:12px;   
+      right: 12px;
     }
   }
 
   .data_card:hover {
-    transition: background-color 0.5s ease,
-    box-shadow 0.5s ease;
-    box-shadow: 0px 3px 5px 0px rgba(0,0,0,.2);
-    transition: background-color 0.5s ease,
-                border 0.5s ease,
-                box-shadow 0.5s ease,
-                transform 0.3s ease;  
+    transition: background-color 0.5s ease, box-shadow 0.5s ease;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.5s ease, border 0.5s ease,
+      box-shadow 0.5s ease, transform 0.3s ease;
     .filter_data {
       opacity: 1;
     }
@@ -140,24 +115,22 @@
 
   .data_card {
     position: relative;
-    cursor: pointer; 
+    cursor: pointer;
     width: 210px;
     min-height: 26px;
     display: flex;
-    flex-direction:row-reverse;
-    align-items:center;
-    justify-content:space-between;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
     // font-weight: 300;
     border-radius: 15px;
-    background-color: #FFF;
+    background-color: #fff;
     //border-left: 3px solid $color-secondary-2-4;
     padding: $standard_padding;
     padding-left: $standard_padding + 2.5;
     box-shadow: rgba(36, 37, 38, 0.08) 4px 4px 15px 0px;
-    transition: background-color 0.5s ease,
-                border 0.3s ease,
-                box-shadow 0.3s ease,
-                transform 0.3s ease;    
+    transition: background-color 0.5s ease, border 0.3s ease,
+      box-shadow 0.3s ease, transform 0.3s ease;
 
     a {
       color: $default_text;
@@ -176,7 +149,7 @@
     opacity: 0.6;
     padding: 4px;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: opacity 0.5s ease;
@@ -194,15 +167,15 @@
 
   .categories.stable {
     color: #fdbd41;
-  }    
+  }
 
-  .categories.prototype {   
+  .categories.prototype {
     color: #fc615d;
-  }   
+  }
 
   .categories.complete {
     color: #35c94a;
-  }  
+  }
 
   @media screen and (min-width: 1339px) {
     .data_section {
@@ -214,12 +187,30 @@
     .data_section {
       width: 500px !important;
     }
-  }  
+  }
 
   @media screen and (min-width: 1023px) and (max-width: 800px) {
     .data_section {
       width: 250px !important;
     }
-  }    
+  }
+}
 
+.hub_section_label {
+  display: flex;
+  height: 34px;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  justify-content: space-between;
+  flex-direction: flex-start;
+  align-items: center;
+  margin-left: $standard_margin;
+  margin-right: $standard_margin;
+  border-bottom: 1px solid $navigation_border;
+  text-align: center;
+}
+.hub_section_label h3 {
+  font-size: $font_normal;
+  color: #888;
+  text-transform: uppercase;
 }
