--- a/app/views/leads/_form.html.erb
+++ b/app/views/leads/_form.html.erb
@@ -1,15 +1,9 @@
-<%= form_with(model: lead) do |form| %>
-  <% if lead.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(lead.errors.count, "error") %> prohibited this lead from being saved:</h2>
+<%= content_tag(:span, 'A new key task exists and should be used.', class: [:feedback, 'feedback-warning']) %>
+<%# TODO = link_to('New/edit key task', edit_lead_task_path(lead_id: @lead&.id )) %>
 
-      <ul>
-        <% lead.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= render 'shared/errors', object: @lead %>
+
+<%= form_with(model: lead) do |form| %>
 
   <div class="field">
     <%= form.label :parent_id %>
@@ -59,21 +53,6 @@
   <div class="field">
     <%= form.label :is_public %>
     <%= form.check_box :is_public %>
-  </div>
-
-  <div class="field">
-    <%= form.label :project_id %>
-    <%= form.number_field :project_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :created_by_id %>
-    <%= form.number_field :created_by_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :updated_by_id %>
-    <%= form.number_field :updated_by_id %>
   </div>
 
   <div class="actions">
