--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -1,1 +1,9 @@
+<%= content_for :additional_navigation do %>
+  <% if !@lead.parent_id -%>
+    <div class="navigation-controls">
+      <%= link_to( content_tag(:span, 'Clone', data: {icon: :new}, class: 'small-icon' ), "/leads/#{@lead.id}/duplicate", method: :post, class: 'navigation-item' ) -%>
+    </div>
+  <% end %>
+<% end %>
+
 <%= render(partial: 'shared/data/project/show', locals: {object: @lead}) -%>
