--- a/app/views/tasks/accessions/breakdown/sqed_depiction/_form.html.erb
+++ b/app/views/tasks/accessions/breakdown/sqed_depiction/_form.html.erb
@@ -111,7 +111,7 @@
 
   <div class="flex-saperate">
     <ul class="context-menu actions">
-      <li> <%= collection_object_radial_tag(@result.sqed_depiction.depiction_object.metamorphosize) %> </li>
+      <li> <%= radial_quick_forms_tag(@result.sqed_depiction.depiction_object.metamorphosize) %> </li>
       <li> <%= tag_default_icon(@result.sqed_depiction.depiction_object.metamorphosize) -%> </li>
       <li> <%= radial_annotator(@result.sqed_depiction.depiction_object.metamorphosize) -%> </li>
       <li> <%= radial_navigation_tag(@result.sqed_depiction.depiction_object.metamorphosize) -%> </li>
