--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -44,7 +44,7 @@
 <% end %>
 
 <%= content_for :icon_navigation do -%>
-  <%= content_tag(:li, collection_object_radial_tag(@image) )   %>
+  <%= content_tag(:li, radial_quick_forms_tag(@image) )   %>
 <% end %>
 
 <%= render(partial: 'shared/data/project/show', locals: {object: @image}) -%>
