--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -13,7 +13,7 @@
 <% end %> 
 
 <%= content_for :icon_navigation do -%>
-  <%= content_tag(:li, collection_object_radial_tag(@source) )   %>
+  <%= content_tag(:li, radial_quick_forms_tag(@source) )   %>
 <% end %>
 
 <%= content_for :associated do %>
