--- a/app/views/tasks/collection_objects/outdated_names/index.html.erb
+++ b/app/views/tasks/collection_objects/outdated_names/index.html.erb
@@ -13,7 +13,7 @@
 <tr>
 <td colspan="4">
   <ul class="horizontal_navbar no_bullets gap-small">
-    <%= tag.li collection_object_radial_tag(co) %>
+    <%= tag.li radial_quick_forms_tag(co) %>
     <%= tag.li radial_navigation_tag(co) %>
     <%= tag.li collection_object_tag(co) %>
   </ul>
