--- a/app/views/field_occurrences/show.html.erb
+++ b/app/views/field_occurrences/show.html.erb
@@ -2,6 +2,10 @@
 <%= content_for :add do -%>
 <% end %>
 
+<%= content_for :edit do
+  link_to(content_tag(:span, 'Edit', 'data-icon' => 'edit', class: 'small-icon'), new_field_occurrence_path(collecting_event_id: @field_occurrence.id), class: 'navigation-item')
+end %>
+
 <%= content_for :report do -%>
 <% end %>
 
